--- a/src/app/dashboard/dashboard-home/dashboard-home.component.html
+++ b/src/app/dashboard/dashboard-home/dashboard-home.component.html
@@ -4,18 +4,18 @@
     <div class="fluid-container">
       <div class="row">
         <div class="col-md-4">
-              <a href="/test"><button class="tried ">{{job_in}}
+              <a href="/dash/test"><button class="tried ">{{job_in}}
                 <div class=" mt-2"><h5>Total:{{Total}} |  Pass:{{Pass}} | Fail:{{Fail}}</h5></div>
               </button></a>
       </div>
       <div class="col-md-4">
-              <a href="/test1"><button class="tried">PolyLogyx_Automation_Test_Suite
+              <a href="/dash/test1"><button class="tried">PolyLogyx_Automation_Test_Suite
                 <div class=" mt-1"><h5>Total:{{Total1}} | Pass:{{Pass1}} | Fail:{{Fail1}}</h5></div>
                     <div class=" mt-1"><h5>Date:{{date_time}}</h5></div>
               </button></a>
       </div>
       <div class="col-md-4">
-            <a href="/test2"><button class="tried">{{job_in2}}
+            <a href="/dash/test2"><button class="tried">{{job_in2}}
               <div class=" mt-2"><h5>Total:{{Total2}} |  Pass:{{Pass2}} |  Fail:{{Fail2}}</h5></div>
             </button></a>
       </div>
