--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,3 +1,19 @@
-<!-- <div class="col-md-4"> -->
-    <!-- <iframe #iframe height="600" width=80%></iframe> -->
-<!-- </div> -->
+<form>
+<div class="login">
+<div class="login-screen">
+<div class="app-title">
+<h1>Login</h1>
+</div>
+<div class="login-form">
+<div class="control-group">
+          <input type="text" class="login-field" value="" [(ngModel)]="username"  name="username">
+<label class="login-field-icon fui-user" for="login-name"></label></div>
+<div class="control-group">
+				<input type="password" class="login-field" value="" [(ngModel)]="password" name="password">
+<label class="login-field-icon fui-lock" for="login-pass"></label></div>
+<input type="submit" value="Log in" class="btn btn-primary btn-large btn-block" (click)="loginuser()">
+
+</div>
+</div>
+</div>
+</form>
