--- a/src/app/history2/history2.component.html
+++ b/src/app/history2/history2.component.html
@@ -1,6 +1,7 @@
-<div class="row">
-      <div class="col-lg-12 ">
-        <h4>{{job_in}}</h4>
+<div class="fluid-container">
+  <div class="row">
+      <div class="col-lg-12 col-sm-2">
+        <h4 class="mt-1">PolyLogyx_Sanity_Test_Suite</h4>
            <table class="table table-hover table-bordered table-responsive-xl" >
             	<thead class="thead-light">
                   <tr>
@@ -12,24 +13,27 @@
                     <th>Total</th>
                     <th>End Time</th>
                     <th>Result</th>
+                    <th>Report</th>
                     </tr>
                 </thead>
               <ng-container *ngFor="let value of data">
-                      <tbody>
+                    <tbody>
                       <tr (click)="value.expanded = !value.expanded">
                         <td>{{value.build}}</td>
                         <td>{{value.time1 | slice:0:10 }}</td>
-                        <td>{{value.time1 | slice:9 }}</td>
+                        <td>{{value.date | slice:10 }}</td>
 
                         <td>{{value.pass}}</td>
                         <td>{{value.fail }}</td>
                         <td>{{value.total}}</td>
-                        <td>{{value.time2 | slice:9}}
+                        <td>{{value.time2}}</td>
                         <td>{{value.result}}</td>
-                        <td><a href="/report1">report.html</a></td> 
+                        <!-- <td><a [routerLink]="['/dash/report', value.build]">report.html</a></td> -->
+                        <td><a [routerLink]="['/dash/report',value.build]">report.html</a></td>
                       </tr>
                      </tbody>
               </ng-container>
           </table>
       </div>
   </div>
+</div>
